# byrRadar

./: .gitignore  README.md  TODO.md  index.html  main.js  package-lock.json  package.json
app/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: byr_client.rs  config.rs  http.rs  main.rs  models.rs  planner.rs  qb_client.rs  rotation.rs  runner.rs
