[package]
name = "byrradar"
version = "0.2.0"
description = "byrRadar desktop client"
authors = ["OpenAI"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
anyhow = "1"
dotenvy = "0.15"
reqwest = { version = "=0.12.9", features = ["blocking", "cookies", "json", "multipart", "rustls-tls"] }
reqwest_cookie_store = "0.8"
scraper = "=0.20.0"
serde = { version = "1", features = ["derive"] }
serde_bencode = "0.2"
serde_bytes = "0.11"
serde_json = "1"
select = "0.6"
tauri = { version = "2.0.6", features = ["tray-icon"] }
tauri-plugin-opener = "2"
url = "2"
uuid = { version = "1", features = ["v4"] }
